added early components, set up login component with styling. Added session routes. Worked on seeds. Added specific client side routes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,52 @@
     transform: rotate(360deg);
   }
 }
+
+// login screen
+.login-container {
+  display: flex;
+  /* flex-direction: column;
+  align-items: center;
+  padding: 50px; */
+}
+
+.login-form-container {
+  /* margin-top: 20%; */
+  width: 500px;
+  margin: 0 auto;
+  padding: 40px;
+  border: 5px solid rgb(62, 53, 160);
+  box-shadow: 0px 0px 5px 1px blue;
+  border-radius: 5px;
+  background-color: rgba(23, 23, 23, 0.972);
+  color: white;
+}
+
+.login-form-inputs{
+  display: flex;
+  width: 50%;
+  height: 25px;
+  /* padding: 5px; */
+  /* margin-bottom: 10px; */
+  margin: 2em auto;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.login-buttons {
+  padding: 10px;
+  background: #031eec;
+  color: #fff;
+  border: 0;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.login-buttons:hover {
+  background-color: rgb(64, 64, 64);
+}
+
+.login-buttons:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
