Login works after being styled and redirects properly. Navbar changed. Login errors display with styling. LogoutScreen added. Users controller with actions for signup added.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -85,3 +85,10 @@
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+
+.login-error{
+  padding: 10px;
+  margin-left: 25%;
+  margin-right: 25%;
+  background-color: rgba(255, 0, 0, 0.2);
+}
