some extra styling in details and for the checkboxes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -134,6 +134,13 @@ nav a:active {
   border-bottom: 2px solid tomato;
 }
 
+.checkboxes{
+  /* text-align: left; */
+}
+.individual{
+  text-align: right;
+}
+
 
 
 
