--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
 }
 
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -134,8 +135,9 @@ nav a:active {
   border-bottom: 2px solid tomato;
 }
 
-.checkboxes{
-  /* text-align: left; */
+.redButton{
+  color: white;
+  background-color: red;
 }
 .individual{
   text-align: right;
