--- a/client/src/App.css
+++ b/client/src/App.css
@@ -152,6 +152,7 @@ body{
 }
 
 nav a {
+  padding-top: 10px;
   display: inline-block;
   margin: 1rem 2rem;
   text-decoration: none;
@@ -164,7 +165,7 @@ nav a {
 
 
 nav a:active {
-  border-bottom: 2px solid tomato;
+  /* border-bottom: 2px solid tomato; */
 }
 
 .redButton{
@@ -180,6 +181,15 @@ nav a:active {
   border-radius: 10px;
   color: darkblue;
   text-shadow: -1px -1px 0 lightblue, 1px -1px 0 lightblue, -1px 1px 0 lightblue, 1px 1px 0 lightblue;
+}
+
+.FlatironLogo{
+  /* height: 10vh; */
+  height: 50px;
+  margin: 1rem 2rem;
+  /* margin-right: 10px; */
+  border-radius: 50px;
+  /* padding: 1px; */
 }
 
 
